# substrate-internals

./: .dockerignore  .envrc.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check.yml  ci.yml
docs/: README.md
docs/substrate-internals/: book.toml
docs/substrate-internals/src/: SUMMARY.md  ch01-substrate-project-structure.md  ch02-parachain-staking-pallet.md  ch04-substrate-consensus.md
nodes/template/: Cargo.toml
nodes/template/src/: benchmarking.rs  chain_spec.rs  command.rs  command_helper.rs  rpc.rs  service.rs
pallets/poe/: Cargo.toml
pallets/poe/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml  README.md
pallets/template/src/: benchmarking.rs  mock.rs  tests.rs
runtimes/template/: Cargo.toml
runtimes/template/src/: lib.rs
zombienet/: moonbase-native.json  template.toml
