[package]
description = 'FRAME pallet poe for proof of existence.'
edition = '2021'
homepage = 'https://substrate.io/'
license = 'Unlicense'
name = 'pallet-poe'
publish = false
repository = 'https://github.com/Akagi201/substrate-internals'
version = '4.0.0-dev'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-std = { version = '4.0.0', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.28" }

[dev-dependencies]
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

[features]
default = ['std']
std = [
  'codec/std',
  'scale-info/std',
  'frame-support/std',
  'frame-system/std',
  'frame-benchmarking/std',
  'sp-std/std',
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ['frame-support/try-runtime']
